--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -112,13 +112,12 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/login.js"></script>
 	<script type="text/javascript" src="js/require-data.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
 	<!-- 时间选择js-->
 	<script type="text/javascript" src="js/service-date-select.js"></script>
 	
 	<!-- 历史订单录入相关js -->	
-	<script type="text/javascript" src="js/history-service-date-select.js"></script>
+	<!-- <script type="text/javascript" src="js/history-service-date-select.js"></script> -->
 	
 		
  	<!-- 用户地址列表显示-->
