git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@286 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -62,8 +62,19 @@
 					<div class="list-group">
 						<ul>
 							<li>
-<!-- 								<a href="#" id="mine-coupon-list" class="item-link smart-select">
- -->								<a href="#" id="mine-coupon-lists" class="item-link smart-select " 	data-back-on-select="true">
+								<a href="#" id="mine-order-lists" class="item-link" >
+									<div class="item-content">
+										<div class="item-inner">
+											<div class="item-title label">我的订单</div>
+											<div class="item-input">
+											</div>
+										</div>
+									</div>
+								</a>
+							</li>	
+						
+							<li>
+								<a href="#" id="mine-coupon-lists" class="item-link smart-select " 	data-back-on-select="true">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">优惠券</div>
@@ -103,7 +114,6 @@
 								</a>
 							</li>
 							<li>
-<!-- 								<a href="#" class="item-link smart-select" 	data-back-on-select="true">-->
 								<a href="#" id="mine-feedback-info" class="item-link smart-select"  >
  									<div class="item-content">
 										<div class="item-inner">
