git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@316 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/tiexinjiashi.html
+++ b/jhj-web-user/order/fiveservice/tiexinjiashi.html
@@ -1,12 +1,13 @@
 	<div data-page="tiexinjiashi-page" class="page" style="background:#FDEEEE;">
 		<div class="page-content" id="serviceContainer">
 			
+			
 			<div id="serviceTemplate" style="display:none">
 			
 				<div class="template-fiveservice">
 					<div class="circle-template-fiveservice2"><img src="{imgUrl}" alt=""></div>
 					<div class="word-template-fiveservice1">
-						<p>{name}</p>
+						<p style="color:#F08E36;">{name}</p>
 					</div>
 					
 					<input  type="hidden" value="{serviceTypeId}">
