--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -25,7 +25,7 @@
 				<div data-page="index" class="page beijing-index"style="overflow:auto;">
 					<div class="page-content" style="margin:0;padding-bottom:80px;">
 						<div class="weather-index">
-							<iframe name="weather_inc" src="http://i.tianqi.com/index.php?c=code&id=6" width="110" height="80" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-top:15px;"></iframe>
+							<iframe allowtransparency="true" frameborder="0" width="140" height="90" scrolling="no" src="http://tianqi.2345.com/plugin/widget/index.htm?s=2&z=1&t=0&v=1&d=1&bd=0&k=000000&f=&q=1&e=1&a=1&c=54511&w=140&h=128&align=center"></iframe>
 							<div class="xiantiao-weather-index"></div>
 							<a href="order/remind/order-remind-tixing.html"><div class="tixing-index">提<br>醒</div></a>
 						</div>
