--- a/jhj-web-user/order/fiveservice/jinpaibaojie.html
+++ b/jhj-web-user/order/fiveservice/jinpaibaojie.html
@@ -1,5 +1,14 @@
 	<div data-page="jinpaibaojie-page" class="page" style="background:#FDEEEE;overflow:auto;">
-		<div class="page-content" id="serviceContainer">
+	
+		
+		<div class="page-content" style="padding-bottom:0;">
+			<div class="fiveservice-img">
+				<img id="topImg" src="" alt="">
+			</div>
+			
+			<div id="serviceContainer">
+			
+			</div>
 			
 			<div id="serviceTemplate" style="display:none">
 				<div class="template-fiveservice" >
@@ -18,6 +27,14 @@
 					
 					<input type="hidden" name="enable" value="{enableNum}">
 				</div>
+			</div>
+			
+			
+			<div class="fiveservice-bottom">
+				<img src="img/icon-fiveservice/five-servicebottom.png" alt="">
+			</div>
+			<div class="fiveservice-bottom1">
+				<img src="img/icon-fiveservice/logo-fiveservice.png" alt="">
 			</div>
 			
 		</div>
