git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@334 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 			</form>
-			<form class="list-block chongzhi-qingchu"style="color:#999;">
+			<!-- <form class="list-block chongzhi-qingchu"style="color:#999;">
 				<div class="list-block">
 					<div class="list-group">
 						<ul>
@@ -51,12 +51,12 @@
 									</div>
 								</div>
 								 <div id="main" style="height:300px"></div>
-<!-- 								<img src="img/icons/tongjitu.png" alt=""style="margin-left:26%;width:46%;">
- -->							</li>
+								<img src="img/icons/tongjitu.png" alt=""style="margin-left:26%;width:46%;">
+							</li>
 						</ul>
 					</div>
 				</div>
-			</form>
+			</form> -->
 			<form  class="list-block chongzhi-qingchu"style="color:#999;">
 				<div class="list-block">
 					<div class="list-group">
