--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -80,6 +80,34 @@
 					</ul>
 				</div>
 			
+			
+			<div class="content-block"style="padding:0;margin:0;">
+				<div class="row"style="background:#F8F8F8;margin-left:0;">
+					
+				 	<div class="col-30"style="width:33.333%;text-align:center;" >
+							<input type="hidden" value="" id="zuofanId">
+							<img src="img/icons/zuofanServiceAddons/northfood.png" name="tag"  />
+							<input type="hidden" value=""  id="zuofanPrice">
+							<div class="col-30" >北方菜</div>
+					</div>
+					<div class="col-30"style="width:33.333%;text-align:center;" >
+							<input type="hidden" value="" id="xiyiId">
+							<img src="img/icons/zuofanServiceAddons/noodles.png" name="tag" />
+							<input type="hidden" value="" id="xiyiPrice">
+							<div class="col-30" >面食</div>
+					</div>
+					<div class="col-30"style="width:33.333%;text-align:center;" >
+							<input type="hidden" value="" id="qingjieId">
+							<img src="img/icons/zuofanServiceAddons/sourthfood.png" name="tag"  />
+							<input type="hidden" value="" id="qingjiePrice">
+							<div class="col-30" >南方菜</div>
+					</div> 					
+				</div>  
+			</div> 
+			
+			
+			
+			
 			<div class="content-block"style="background:0;margin:0;padding:0;" >
 				<a href="#" id="submitOrder" class="button active shendu-submit">提交订单</a>
 			</div>	
