git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@340 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/jinpaibaojie.html
+++ b/jhj-web-user/order/fiveservice/jinpaibaojie.html
@@ -6,6 +6,8 @@
 				<img id="topImg" src="" alt="">
 			</div>
 			
+			<input  type="hidden" id="parentServiceType" value="">
+			
 			<div id="serviceContainer">
 			
 			</div>
