--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -81,7 +81,7 @@
 				</div>
 			
 			
-			<div class="content-block"style="padding:0;margin:0;">
+			<div  id="hhAddons" class="content-block"style="padding:0;margin:0;">
 				<div class="row"style="background:#F8F8F8;margin-left:0;">
 					
 				 	<div class="col-30"style="width:33.333%;text-align:center;" >
