--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -14,51 +14,42 @@
 
 </head>
 <body>
-	<!-- Status bar overlay for fullscreen mode-->
 	<div class="statusbar-overlay"></div>
-	<!-- Panels overlay-->
 	<div class="panel-overlay"></div>
 
-
-
-	<!-- Views-->
 	<div class="views">
 
-		<!-- Your main view, should have "view-main" class-->
 		<div class="view view-main" style="padding-bottom:50px!important;">
 
-			<!-- Pages, because we need fixed-through navbar and toolbar, it has additional appropriate classes-->
 			<div class="pages navbar-through toolbar-through">
-				<!-- Page, data-page contains page name-->
 				<div data-page="index" class="page beijing-index"style="overflow:auto;">
-					<!-- Scrollable page content-->
 					<div class="page-content" style="margin:0;padding-bottom:80px;">
 						<div class="weather-index">
 							<iframe allowtransparency="true" frameborder="0" width="140" height="90" scrolling="no" src="http://tianqi.2345.com/plugin/widget/index.htm?s=2&z=1&t=0&v=1&d=1&bd=0&k=000000&f=&q=1&e=1&a=1&c=54511&w=140&h=128&align=center"></iframe>
 							<div class="xiantiao-weather-index"></div>
 							<a href="order/remind/order-remind-tixing.html"><div class="tixing-index">提<br>醒</div></a>
 						</div>
-						<a href="order/fiveservice/jinpaibaojie.html" class="mincircle">
+						<a href="order/fiveservice/jinpaibaojie.html?firstServiceType=23" class="mincircle">
 							<img src="img/newindex/jpbj-index.png" alt="">
 							<p>金牌保洁</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/chuniangshaofan.html" class="mincircle">
+						<a href="order/fiveservice/jinpaibaojie.html?firstServiceType=24" class="mincircle">
 							<img src="img/newindex/cnsf-index.png" alt="">
 							<p>厨娘烧饭</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/tiexinjiashi.html" class="mincircle">
+						<a href="order/fiveservice/tiexinjiashi.html?firstServiceType=25" class="mincircle">
 							<img src="img/newindex/txjs-index.png" alt="">
 							<p>贴心家事</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/shenduyanghu.html" class="mincircle">
+						<a href="order/fiveservice/tiexinjiashi.html?firstServiceType=26" class="mincircle">
 							<img src="img/newindex/sdyh-index.png" alt="">
 							<p>深度养护</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/qiyefuwu.html" class="mincircle">
+						<a href="order/fiveservice/tiexinjiashi.html?firstServiceType=27" class="mincircle">
 							<img src="img/newindex/bmfw-index.png" alt="">
 							<p>企业服务</p>
 							<div class="xiabiaoxian"></div>
@@ -72,13 +63,10 @@
 								<p>定制服务</p>
 							</div>
 						</a>
-						
 					</div>
 				</div>
 			</div>
 		</div>
-
-			<!-- Bottom Toolbar-->
 			
 			<div class="toolbar tabbar tabbar-labels">
 			    <div class="toolbar-inner-jhj">
