--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -209,6 +209,6 @@
     
     <script type="text/javascript" src="js/order/fiveservice/jinpaibaojie.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/tiexinjiashi.js"></script>
-    
+    <script type="text/javascript" src="js/order/fiveservice/quanniandingzhi.js"></script>
 </body>
 </html>
