git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@378 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -1,6 +1,5 @@
 
 	<div data-page="order-am-faqiyuyue-page" class="page" style="background:#E5E5E5;overflow:auto;">
-		<!-- Scrollable page content-->
 		<div class="page-content"style="margin:0;padding-bottom:40px;" >
 			<form id="order-am-faqiyuyue-form" class="list-block">
 				
@@ -49,7 +48,7 @@
 				      </div>
 				    </li>
 				</ul>
-				<a href="#" id="order-am-faqiyuyue-now-jhj2.1" class="button active shendu-submit">现在预约</a>
+				<a href="#" id="order-am-faqiyuyue-page-a-submit" class="button active shendu-submit">现在预约</a>
 			</div>
 			</form>
 		</div>
