git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@382 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -34,7 +34,7 @@
 							<p>金牌保洁</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/jinpaibaojie.html?firstServiceType=24" class="mincircle">
+						<a href="order/fiveservice/cook.html?firstServiceType=24" class="mincircle">
 							<img src="img/newindex/cnsf-index.png" alt="">
 							<p>厨娘烧饭</p>
 							<div class="xiabiaoxian"></div>
@@ -208,6 +208,7 @@
     
     
     <script type="text/javascript" src="js/order/fiveservice/jinpaibaojie.js"></script>
+    <script type="text/javascript" src="js/order/fiveservice/cook.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/tiexinjiashi.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/quanniandingzhi.js"></script>
 </body>
