--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -34,7 +34,7 @@
 							<p>金牌保洁</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/jinpaibaojie.html?firstServiceType=24" class="mincircle">
+						<a href="order/fiveservice/cook.html?firstServiceType=24" class="mincircle">
 							<img src="img/newindex/cnsf-index.png" alt="">
 							<p>厨娘烧饭</p>
 							<div class="xiabiaoxian"></div>
