git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@383 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/cook.html
+++ b/jhj-web-user/order/fiveservice/cook.html
@@ -1,4 +1,4 @@
-	<div data-page="jinpaibaojie-page" class="page" style="background:#FDEEEE;overflow:auto;">
+	<div data-page="order-cook-page" class="page" style="background:#FDEEEE;overflow:auto;">
 	
 		<div class="page-content" style="padding-bottom:0;">
 			<div class="fiveservice-img">
