git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@384 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/QuanNianDingZhi.html
+++ b/jhj-web-user/order/fiveservice/QuanNianDingZhi.html
@@ -3,7 +3,7 @@
 		<div class="page-content" style="padding-bottom:0;">
 			<div class="jpbj-jpsh">服务名称</div>
 			<div class="jpbj-jpsh-xiantiao"></div>
-			<p class="jpbj-jpsh-mingxi" id="serviceName"></p>
+			<p class="jpbj-jpsh-mingxi" id="serviceName">{{name}}</p>
 
 
 			<div class="jpbj-jpsh">服务性质</div>
@@ -14,24 +14,24 @@
 
 			<div class="jpbj-jpsh">服务费用</div>
 			<div class="jpbj-jpsh-xiantiao"></div>
-			<p class="jpbj-jpsh-mingxi" id="price"></p>
-			<p class="jpbj-jpsh-mingxi1" id="monthPrice" ></p>
-			<p class="jpbj-jpsh-mingxi2" id="yearPrice"></p>
+			<p class="jpbj-jpsh-mingxi" id="price">{{price_str}}</p>
+			<p class="jpbj-jpsh-mingxi1" id="monthPrice" >{{month_price}}</p>
+			<p class="jpbj-jpsh-mingxi2" id="yearPrice">{{year_price}}</p>
 
 
 
 			<div class="jpbj-jpsh">服务次数</div>
 			<div class="jpbj-jpsh-xiantiao"></div>
-			<p class="jpbj-jpsh-mingxi" id="yearTimes"></p>
+			<p class="jpbj-jpsh-mingxi" id="yearTimes">{{year_times}}</p>
 
 
 			<div class="jpbj-jpsh">服务频率</div>
 			<div class="jpbj-jpsh-xiantiao"></div>
-			<p class="jpbj-jpsh-mingxi" id="weekTimes"></p>
+			<p class="jpbj-jpsh-mingxi" id="weekTimes">{{price_and_unit}}</p>
 
 			<div class="jpbj-jpsh">服务内容</div>
 			<div class="jpbj-jpsh-xiantiao"></div>
-			<p class="jpbj-jpsh-mingxi" id="serviceContent"></p>
+			<p class="jpbj-jpsh-mingxi" id="serviceContent">{{service_content}}</p>
 			
 			<input type="hidden" id="serviceTypeId" value="">
 			
