git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@392 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/cook.html
+++ b/jhj-web-user/order/fiveservice/cook.html
@@ -13,7 +13,7 @@
 				<div class="template-fiveservice" >
 					<div class="circle-template-fiveservice1">{{name}}</div>
 					<div class="word-template-fiveservice">
-						<p>{{name}}</p>
+						<p>厨娘烧饭*{{name}}</p>
 						<p>{{remarks}}</p>
 						<p>{{price_and_unit}}</p>
 						
