--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -5,11 +5,12 @@
 				
 				<input type="hidden" name="serviceType" id="serviceType" value="">
 				
+				<input type="hidden" id="parentServiceTypeId" value = "">
 				<ul>
 					 <li class="accordion-item">
 					 	<a href="#" class="item-content item-link">
 				        	<div class="item-inner">
-				         		 <div class="item-title" id="servce_type_name"></div>
+				         		 <div class="item-title" id="servceTypeName"></div>
 				        	</div>
 				        </a>
 				        <div class="accordion-item-content">
