--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -50,7 +50,7 @@
 								<div class="item-inner">
 									<div class="item-title label">服务时长:</div>
 									<div class="item-xx" >
-										<span>3小时</span>
+										<span id="serviceHourDescription">3小时</span>
 									</div>
 								</div>
 							</div>
