--- a/jhj-web-user/order/fiveservice/jinpaibaojie.html
+++ b/jhj-web-user/order/fiveservice/jinpaibaojie.html
@@ -14,7 +14,7 @@
 				<div class="template-fiveservice" >
 					<div class="circle-template-fiveservice1">{{name}}</div>
 					<div class="word-template-fiveservice">
-						<p>{{name}}</p>
+						<p>金牌保洁*{{name}}</p>
 						<p>{{remarks}}</p>
 						<p>{{price_and_unit}}</p>
 						
