git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@396 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -29,7 +29,7 @@
 								<div>会员级别</div>
 								<div style="color:#EF7C00;">普通会员</div>
 							</li>
-							<li class="my-jiben">
+							<li class="my-jiben" id="restMoneyDiv">
 								<div>余额</div>
 								<div style="color:#EF7C00;" id="mine-rest-money"></div>
 							</li>
@@ -58,8 +58,8 @@
 				</div>
 			</form> -->
 			<form  class="list-block chongzhi-qingchu"style="color:#999;">
-				<div class="list-block">
-					<div class="list-group">
+				<div  class="list-block">
+					<div class="list-group" style="margin-top:50px">
 						<ul>
 							<li>
 								<a href="#" id="mine-order-lists" class="item-link" >
