--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -23,33 +23,33 @@
 
 			<div class="pages navbar-through toolbar-through">
 				<div data-page="index" class="page beijing-index"style="overflow:auto;">
-					<div class="page-content" style="margin:0;padding-bottom:80px;">
+					<div id="indexPageContentDiv" class="page-content" style="margin:0;padding-bottom:80px;">
 						<div class="weather-index">
 							<iframe allowtransparency="true" frameborder="0" width="140" height="90" scrolling="no" src="http://tianqi.2345.com/plugin/widget/index.htm?s=2&z=1&t=0&v=1&d=1&bd=0&k=000000&f=&q=1&e=1&a=1&c=54511&w=140&h=128&align=center"></iframe>
 							<div class="xiantiao-weather-index"></div>
 							<a href="order/remind/order-remind-tixing.html"><div class="tixing-index">提<br>醒</div></a>
 						</div>
-						<a href="order/fiveservice/jinpaibaojie.html?firstServiceType=23" class="mincircle">
+						<a href="#" class="mincircle">
 							<img src="img/newindex/jpbj-index.png" alt="">
 							<p>金牌保洁</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/cook.html?firstServiceType=24" class="mincircle">
+						<a href="#" class="mincircle">
 							<img src="img/newindex/cnsf-index.png" alt="">
 							<p>厨娘烧饭</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/tiexinjiashi.html?firstServiceType=25" class="mincircle">
+						<a href="#" class="mincircle">
 							<img src="img/newindex/txjs-index.png" alt="">
 							<p>贴心家事</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/tiexinjiashi.html?firstServiceType=26" class="mincircle">
+						<a href="#" class="mincircle">
 							<img src="img/newindex/sdyh-index.png" alt="">
 							<p>深度养护</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="order/fiveservice/tiexinjiashi.html?firstServiceType=27" class="mincircle">
+						<a href="#" class="mincircle">
 							<img src="img/newindex/bmfw-index.png" alt="">
 							<p>企业服务</p>
 							<div class="xiabiaoxian"></div>
@@ -113,6 +113,8 @@
 	<script type="text/javascript" src="js/login.js"></script>
 	<script type="text/javascript" src="js/require-data.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
+	
+	<script type="text/javascript" src="js/index.js"></script>
 	<!-- 时间选择js-->
 	<script type="text/javascript" src="js/service-date-select.js"></script>
 	
@@ -211,5 +213,8 @@
     <script type="text/javascript" src="js/order/fiveservice/cook.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/tiexinjiashi.js"></script>
     <script type="text/javascript" src="js/order/fiveservice/quanniandingzhi.js"></script>
+    
+    <!-- 我的 余额  消费明细 -->
+    <script type="text/javascript" src="js/user/mine-rest-money-detail.js"></script>
 </body>
 </html>
