--- a/jhj-web-user/order/fiveservice/jinpaibaojie.html
+++ b/jhj-web-user/order/fiveservice/jinpaibaojie.html
@@ -12,7 +12,10 @@
 				{{#each data}}
 
 				<div class="template-fiveservice" >
-					<div class="circle-template-fiveservice1">{{name}}</div>
+					<div class="circle-template-fiveservice2">
+						<img src="{{service_img_url}}" alt="">
+					</div>
+					
 					<div class="word-template-fiveservice">
 						<p>金牌保洁*{{name}}</p>
 						<p>{{remarks}}</p>
