--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -15,7 +15,7 @@
 				        </a>
 				        <div class="accordion-item-content">
 				        	<div class="content-block">
-				         	  <p id="servicePrice"></p>
+				         	  <p id="serviceContent"></p>
 				        	</div>
 				        </div>
 				    </li>
@@ -28,7 +28,7 @@
 				        </a>
 				        <div class="accordion-item-content">
 				        	<div class="content-block">
-				         	  <p id="serviceIntro"></p>
+				         	  <p id="servicePrice"></p>
 				        	</div>
 				        </div>
 				    </li>
