git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@404 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/mine-rest-money-detail.html
+++ b/jhj-web-user/user/mine-rest-money-detail.html
@@ -1,10 +1,10 @@
 <div class="pages">
 	<div data-page="mine-rest-money-detail-page" class="page" style="overflow:auto;background:#E5E5E5;">
 		<div class="page-content" id="nowScroll" style="min-height:792px;height:auto!important;padding-bottom:60px!important;">
-			  <div class="dangqian-list">
+			  <!-- <div class="dangqian-list">
               	<div class="dangqian-box" id="btn-order-now">订单支付</div>
               	<div class="history-box" id="btn-order-history">会员充值</div>
-              </div>
+              </div> -->
 			
 				<div class="list-block" id="card-hour-now-list">
 					<ul style="background:#E5E5E5;">
@@ -12,7 +12,7 @@
 					</ul>
 				</div>
 				<div id="more">
-					<a href="#" id="order-list-more" class="button active hjyh-submit">点击加载更多</a>
+					<a href="#" id="pay-detail-list-more" class="button active hjyh-submit">点击加载更多</a>
 				</div>
 			
 			<!-- 每块 card的展示内容  模板 -->
@@ -27,7 +27,7 @@
 						</div>
 						<div class="list-card2">
 							<div class="list-card2-1">总金额：{orderMoney}</div>
-							<div class="list-card2-1">支付金额：{orderPay}</div>
+							<div class="list-card2-1" style="margin-left:200px">支付金额：{orderPay}</div>
 							<div class="list-card2-1">时间：{addTime}</div>
 						</div>
 					</li>
