git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@405 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -75,7 +75,7 @@
 			            <span class="tabbar-label">首页</span>
 			        </a>
 			        
-			        <a href="#" id="toolbar-order" onclick="toolBarHref('user/user-am-detail.html', 'toolbar-order');"  class="no-animation link" style="color:#FFF">
+			        <a href="#" id="toolbar-order" onclick="toolBarHref('user/user-am-list.html', 'toolbar-order');"  class="no-animation link" style="color:#FFF">
 			            <i class="icon toolbar-icon-order"></i>
 			            <span class="tabbar-label">助理</span>
 			        </a>
@@ -139,6 +139,7 @@
 	<!-- 用户添加地址 -->
 	<script type="text/javascript"  src="js/user/mine-add-addrs.js"></script>  
 	<!-- 用户，查看 助理页签 -->
+	<script type="text/javascript" src="js/user/user-am-list.js"></script>
 	<script type="text/javascript" src="js/user/user-am-detail.js"></script>
 	
 	<!-- 钟点工提交订单页面 js -->	
