git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@415 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -25,31 +25,31 @@
 				<div data-page="index" class="page beijing-index"style="overflow:auto;">
 					<div id="indexPageContentDiv" class="page-content" style="margin:0;padding-bottom:80px;">
 						<div class="weather-index">
-							
+							<iframe allowtransparency="true" frameborder="0" width="140" height="90" scrolling="no" src="http://tianqi.2345.com/plugin/widget/index.htm?s=2&z=1&t=0&v=1&d=1&bd=0&k=000000&f=&q=1&e=1&a=1&c=54511&w=140&h=128&align=center"></iframe>
 							<div class="xiantiao-weather-index"></div>
 							<a href="order/remind/order-remind-tixing.html"><div class="tixing-index">提<br>醒</div></a>
 						</div>
-						<a href="#" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/jinpaibaojie.html', 23)" class="mincircle">
 							<img src="img/newindex/jpbj-index.png" alt="">
 							<p>金牌保洁</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="#" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/cook.html', 24)" class="mincircle">
 							<img src="img/newindex/cnsf-index.png" alt="">
 							<p>厨娘烧饭</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="#" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 25)" class="mincircle">
 							<img src="img/newindex/txjs-index.png" alt="">
 							<p>贴心家事</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="#" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)" class="mincircle">
 							<img src="img/newindex/sdyh-index.png" alt="">
 							<p>深度养护</p>
 							<div class="xiabiaoxian"></div>
 						</a>
-						<a href="#" class="mincircle">
+						<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 27)" class="mincircle">
 							<img src="img/newindex/bmfw-index.png" alt="">
 							<p>企业服务</p>
 							<div class="xiabiaoxian"></div>
