git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@418 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -15,7 +15,7 @@
 				        </a>
 				        <div class="accordion-item-content">
 				        	<div class="content-block">
-				         	  <p id="serviceContent"></p>
+				         	  <p id="serviceContents"></p>
 				        	</div>
 				        </div>
 				    </li>
@@ -45,7 +45,7 @@
 				<ul> 
 					<li class="align-top">
 				      <div class="item-content" style="padding:0;background:#E5E5E5;">
-				            <textarea rows="5" id="serviceContent" name="service_content" placeholder="可以在这里用文字描述您的服务要求:" style="height:160px;"></textarea>
+				            <textarea rows="5" id="serviceContentText" name="service_content" placeholder="可以在这里用文字描述您的服务要求:" style="height:160px;"></textarea>
 				      </div>
 				    </li>
 				</ul>
