git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@435 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -7,8 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <title>叮当到家</title>
-<link rel="stylesheet" href="css/framework7.css">
-<link rel="stylesheet" href="css/framework7.themes.css">
+<link rel="stylesheet" href="css/framework7.ios.min.css">
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
 <link rel="stylesheet" href="css/my-app.css">
 
@@ -149,6 +148,9 @@
 	<script type="text/javascript" src="js/order/order-form-zhongdiangong.js"></script>
 	<!-- 钟点工支付页面 -->
 	<script type="text/javascript" src="js/order/order-form-zhongdiangong-pay.js"></script>
+	
+	<!-- 用户版，当前订单列表 -->
+	<script type="text/javascript" src="js/order/order-cal.js"></script>
 	<!-- 用户版，当前订单列表 -->
 	<script type="text/javascript" src="js/order/order-hour-now-list.js"></script>
 
