--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -7,8 +7,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <title>叮当到家</title>
-<link rel="stylesheet" href="css/framework7.min.css">
-<link rel="stylesheet" href="css/framework7.themes.min.css">
+<link rel="stylesheet" href="css/framework7.ios.min.css">
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
 <link rel="stylesheet" href="css/my-app.min.css?t=52fdad8d">
 
