git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@439 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -2,145 +2,92 @@
 <!-- Top Navbar-->
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine" class="page"style="overflow:auto;">
-		<div class="page-content" >
-			<form id="my-form" class="list-block chongzhi-qingchu"style="color:#999;padding-bottom:10px;">
+	<div data-page="mine" class="page" style="overflow: auto;">
+		<div class="page-content">
+			<form id="my-form" class="list-block chongzhi-qingchu" style="color: #999; padding-bottom: 10px;">
 				<div class="list-block">
 					<div class="list-group">
 						<ul>
-							<li>
-								<a href="#" id="mine-info" class="item-link smart-select"  >
+							<li><a href="#" id="mine-info" class="item-link smart-select">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title">
 												<img src="img/icons/my-main.png" alt="">
 											</div>
-											<div class="item-input"style="text-align:left;">
-												<span id="mobile" >{{mobile}}</span>
-												<select align="center" name="city_id">
-													<option value="0"></option>
-												</select>
+											<div class="item-input" style="text-align: left;">
+												<span id="mobile">{{mobile}}</span> 
 											</div>
 										</div>
 									</div>
-								</a>
-							</li>
+							</a></li>
 							<li class="my-jiben">
 								<div>会员级别</div>
-								<div style="color:#EF7C00;">普通会员</div>
+								<div style="color: #EF7C00;">普通会员</div>
 							</li>
 							<li class="my-jiben" id="restMoneyDiv">
 								<div>余额</div>
-								<div style="color:#EF7C00;" id="mine-rest-money">{{rest_money}}元</div>
+								<div style="color: #EF7C00;" id="mine-rest-money">{{rest_money}}元</div>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</form>
-			<!-- <form class="list-block chongzhi-qingchu"style="color:#999;">
+			
+			<form class="list-block chongzhi-qingchu" style="color: #999;">
 				<div class="list-block">
-					<div class="list-group">
+					<div class="list-group" style="margin-top: 50px">
 						<ul>
-							<li>
-								<div class="item-content">
-									<div class="item-inner">
-										<div class="item-title label" style="width:134px!important;">助理服务时长</div>
-										<div class="item-title">
-											<span id="am-time-span" style="color:orange"></span>
-										</div>
-									</div>
-								</div>
-								 <div id="main" style="height:300px"></div>
-								<img src="img/icons/tongjitu.png" alt=""style="margin-left:26%;width:46%;">
-							</li>
-						</ul>
-					</div>
-				</div>
-			</form> -->
-			<form  class="list-block chongzhi-qingchu"style="color:#999;">
-				<div  class="list-block">
-					<div class="list-group" style="margin-top:50px">
-						<ul>
-							<li>
-								<a href="#" id="mine-order-lists" class="item-link" >
+							<li><a href="#" id="mine-order-lists" class="item-link">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">我的订单</div>
-											<div class="item-input">
-											</div>
+											<div class="item-input"></div>
 										</div>
 									</div>
-								</a>
-							</li>	
-						
-							<li>
-								<a href="#" id="mine-coupon-lists" class="item-link smart-select " 	data-back-on-select="true">
+							</a></li>
+
+							<li><a href="#" id="mine-coupon-lists" class="item-link smart-select " data-back-on-select="true">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">优惠券</div>
-											<div class="item-input"style="text-align:right;">
-												<span style="color:#EF7C00;" id="total_coupon">{{total_coupon}}张</span>
-												<select align="center" name="city_id">
-													<option value="0"></option>
-												</select>
+											<div class="item-input" style="text-align: right;">
+												<span style="color: #EF7C00;" id="total_coupon">{{total_coupon}}张</span> 
 											</div>
 										</div>
 									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#" id="mine-charge-list" class="item-link smart-select" 	data-back-on-select="true">
+							</a></li>
+							<li><a href="#" id="mine-charge-list" class="item-link smart-select" data-back-on-select="true">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">充值</div>
-											<div class="item-input">
-												<select align="center" name="city_id">
-													<option value="0"></option>
-												</select>
-											</div>
+											<div class="item-input"></div>
 										</div>
 									</div>
-								</a>
-							</li>
-							<li>
-							<a href="#" id="mine-addr-list" class="item-link"  >
+							</a></li>
+							<li><a href="#" id="mine-addr-list" class="item-link">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">地址管理</div>
-											<div class="item-input">
-											</div>
+											<div class="item-input"></div>
 										</div>
 									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#" id="mine-feedback-info" class="item-link smart-select"  >
- 									<div class="item-content">
+							</a></li>
+							<li><a href="#" id="mine-feedback-info" class="item-link smart-select">
+									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">意见反馈</div>
-											<div class="item-input">
-												<select align="center" name="city_id">
-													<option value="0"></option>
-												</select>
-											</div>
+											<div class="item-input"></div>
 										</div>
 									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#"  id="mine-more" class="item-link smart-select" >
+							</a></li>
+							<li><a href="#" id="mine-more" class="item-link smart-select">
 									<div class="item-content">
 										<div class="item-inner">
 											<div class="item-title label">更多</div>
-											<div class="item-input">
-												<select align="center" name="city_id">
-													<option value="0"></option>
-												</select>
-											</div>
+											<div class="item-input"></div>
 										</div>
 									</div>
-								</a>
-							</li>	
+							</a></li>
 						</ul>
 					</div>
 				</div>
@@ -148,4 +95,4 @@
 			<a href="#" class="button active user-logout my-submit">退出当前账号</a>
 		</div>
 	</div>
-</div>						
+</div>
