--- a/jhj-web-user/user/agreement.html
+++ b/jhj-web-user/user/agreement.html
@@ -7,26 +7,30 @@
       <div class="card-header" style="font-size:22px;font-weight:blod;">用户协议</div>
       <div class="card-content">
       <div class="card-content-inner"><p style="margin:0;color:#EF7C00;">尊敬的用户:</p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;欢迎您进入<叮当到家>平台,成为我们的会员,共同致力于新的模式下的家庭服务体系。</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 欢迎您进入<叮当到家>平台,成为我们的会员,共同致力于让美好生活不再有家务之忧。</p>
 
 
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》是以综合性家庭生活服务为基础的社区O2O平台，通过家庭生活助理服务满足客户个性化的家庭生活需求，实现轻松自在的家庭生活方式。</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; <叮当到家>是以家政服务为入口的个性化家庭服务定制平台。通过递进式、团队式、主动式、定制式服务，为中高端家庭提供全年服务套餐，满足家庭服务个性化诉求。</p>
 
 
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;叮当到家致力于解决客户的一切家庭琐事，并创新的将非标准化的服务融入线上平台，打造出真正的家庭服务O2O体系。</p>
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp; <叮当到家>致力于让美好生活不再有家务之忧。通过移动平台、主云门店系统、家庭助理团队三位一体的三角业务模式，提供较为全面的服务品类，能够基本涵盖各项家庭需求，通过一键订制和主动式服务，全年即可享受按时按需服务，坐享服务到家，让您真正实现轻松自在的生活方式。</p>
 
         <div class="card-content-inner"><p style="margin:0;color:#EF7C00;"> 一、会员须知:</p>
 <p style="margin:0;font-weigt:blod;">&nbsp;&nbsp;&nbsp;&nbsp;1、在本站注册的会员，必须遵守《互联网电子公告服务管理规定》，不得在本站发表诽谤他人，侵犯他人隐私，侵犯他人知识产权，传播病毒，政治言论，商业讯息等信息。</p>
 
 
-<p style="margin:0;font-weigt:blod;">&nbsp;&nbsp;&nbsp;&nbsp;2、所有在本站发表的文章，本站都具有最终编辑权，并且保留用于印刷或向第三方发表的权利，无论你的资料齐全与否，我们将有权不作任何通知使用你在本站发布的作品。 </p>
+<p style="margin:0;font-weigt:blod;">&nbsp;&nbsp;&nbsp;&nbsp;2、所有在本站发表的文章，本站都具有最终编辑权，并且保留用于印刷或向第三方发表的权利，凡是您在本网站上传的资料，不论内容是否完整，本网站都有权引用，而不需要再次告知您本人。</p>
 
 <p style="margin:0;border-bottom:1px solid #ccc;font-weigt:blod;">&nbsp;&nbsp;&nbsp;&nbsp;3、在登陆过程中，您需要注册一个叮当到家帐户，您需要记住所使用的手机号，准确输入您的手机号，很快就会在手机号上出现“验证码”，及时录入验证码，就可以顺利进入操作平台。</p>
 
 
+<p style="margin:0;border-bottom:1px solid #ccc;font-weigt:blod;">&nbsp;&nbsp;&nbsp;&nbsp;相信您会遵守法律法规及社会公德。 您的手机最好是实名，它将对您在网上发生的所有活动承担责任。</p>
+
+
+
 <p style="margin:0;color:#EF7C00;">二、提醒事项:</p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;您可以在帐户中查询到您的订单记录，包括为您提供服务的服务人员信息及所提供服务的具体地点记录。使用《叮当到家》服务，您应负责维护您的帐户的保密性并限制第三方使用/访问您的计算机或移动设备，并且，您同意对在您的帐户和密码下发生的所有活动承担责任。如果您未满18周岁，您只能在父母或监护人的参与下使用服务。我们保留自行决定终止提供服务、关闭帐户、删除或编辑内容或取消订单的权利。</p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;与您对接的是具体的服务人员，如因服务人员原因导致用户遭受相关财产及人身损害的，用户应直接向服务人员追偿，《叮当到家》免于承担因服务人员与用户之间家政服务协议履行所致任何纠纷的赔偿责任。</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;您可以在帐户中查询到您的订单记录，包括为您提供服务的服务人员信息及所提供服务的具体地点记录。使用<叮当到家>服务，您应负责维护您的帐户的保密性并限制第三方使用/访问您的计算机或移动设备，并且，您有责任对在您的帐户和密码下发生的所有活动承担责任。如果您未满18周岁，您只能在父母或监护人的参与下使用服务。网站具有根据具体情况自行决定终止提供服务、关闭帐户、删除或编辑内容或取消订单的权利。</p>
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;与您对接的是具体的服务人员，如因服务人员原因导致用户遭受相关财产及人身损害的，用户应直接向服务人员追偿，<叮当到家>免于承担因服务人员与用户之间家政服务协议履行所致任何纠纷的赔偿责任。</p>
 
 <p style="margin:0;color:#EF7C00;">三、关于服务开始和提供</p>
 <p style="margin:0;">本条款所述“服务订单”，是指《叮当到家》接受用户委托，承诺按照用户具体需求访寻相应提供具体服务的服务人员与用户达成家政服务协议的委托服务合同。</p>
@@ -40,58 +44,127 @@
 <p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;4服务人员履行完毕其与用户达成的服务合同后，用户应当按照双方之间达成的家政服务协议向服务人员支付服务价款。用户可作出相应的评价，以供叮当到家进一步改进服务。</p>
 
 
-<p style="margin:0;color:#EF7C00;">四、信息发布</p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;1《叮当到家》会将服务人员信息（包括但不限于姓名、年龄、籍贯和服务报价等）公布于叮当到家服务平台。我们努力使该等服务人员信息尽可能地真实和准确，但是，我们无法就其内容的准确性、完整性、可靠性作出保证。如果您认为上述信息与服务人员的真实信息不一致，且您无法接受该不一致的，您唯一可以选择的救济方式为解除与服务人员之间的服务合同，并通过客户或服务评价体系通知我们，我们将即刻更新所发布的信息，并依照对服务人员的管理政策对服务人员作出相应处理。
+<p style="margin:0;color:#EF7C00;">四、服务期内合同提前终止时的费用结算</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;1如实际服务时间不足一个月而双方终止合同时，<叮当到家>按实际服务单数收取服务费，多退少补，单价按服务套餐单价计算的，不执行优惠价格。
 </p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp; 2用户可以在《叮当到家》服务平台张贴评论、意见和其他内容，以及提出建议、意见或其他信息，唯其前提是该等内容须不违反中国现行法律法规及其他规范性文件的要求，不含有非法、淫秽、威胁、诽谤、侵犯隐私、侵犯知识产权或以其他形式对第三方权利构成侵犯。叮当到家保留清除或编辑这些内容的权利（但非义务），但不对用户所张贴的内容进行经常性的审查。用户声明和保证对于因其所提供内容引起的对叮当到家的损害进行赔偿。</p>
-
-
-<p style="margin:0;color:#EF7C00;">五.隐私</p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》可能会要求用户提供其手机号码及位置信息等个人信息，以便实现向用户推荐更适合其地理范围需求的服务人员等重要功能。《叮当到家》会尽最大努力对前述用户个人信息进行妥善保管，除征得用户明确同意和法律明确规定外，叮当到家不会向任何第三方提供用户前述信息。
-
-
-<p style="margin:0;color:#EF7C00;">六、软件使用条款</p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;您需要下载《叮当到家》提供的手机软件并安装后方得以从手机客户端使用叮当到家所提供的服务。《叮当到家》在此授予您免费的、不可转让的、非独占的、全球性个人许可，允许您使用由《叮当到家》提供的、包含在服务中的软件。但是，您不得复制、修改、发布、出售或出租我们的服务或所含软件的任何部分，也不得进行反向工程或试图提取该软件的源代码，除非法律禁止上述限制或您已获得叮当到家的书面许可。</p>
-
-
-<p style="margin:0;color:#EF7C00;">七 、关于版权</p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》服务所包含或提供的所有内容诸如文字、图表、标识、按钮图标、图像、声音文件片段、数字下载、数据编辑和软件都是叮当到家或其内 容提供者的财产，受中国和国际版权法的保护。叮当到家上所提供使用的所有软件都是叮当到家或其软件供应商的财产，受中国和国际版权法的保护。</p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp; 同时，《叮当到家》尊重他人的知识产权。如果您认为相应信息对您的作品的使用已经构成版权侵犯，请及时通知我们，我们将按照现行法律法规的规定的版权侵权投诉程序予以处理。同时，您同意补偿叮当到家因您所提交的通知而可能 产生的第三方对于叮当到家的索赔要求。</p>
-
-
-<p style="margin:0;color:#EF7C00;">八.关于商标权利</p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;本网站服务所包含或者提供的图表、标识、网页页眉、按钮图标、文字、服务品名均为《叮当到家》的商标、注册商标或商业外观。这些商标或商业 外观不得以任何可能引起消费者混淆的方式或任何诋毁或诽谤叮当到家的方式用于与本网站或其关联公司无关联的任何商品或服务上。未经服务人员的书面许可，本网站上的任何内容都不应被解释为以默许或其他方式授予许可或使用本网站上出现的商标的权利。</p>
-
-
-
-<p style="margin:0;color:#EF7C00;">九 .服务的修改和终止</p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》始终在不断更改和改进其所提供的服务。叮当到家可能会增加或删除某项服务功能，也可能暂停或彻底停止某项服务。用户可以随时停止 使用叮当到家的服务，叮当到家也可能随时停止向用户提供服务，或随时对《叮当到家》的服务增加或设置新的限制。但是，如果《叮当到家》停止某项服务，则在可能的情况下，《叮当到家》会向用户发出合理的提前通知，并让用户有机会备份和转移其留存在《叮当到家》中的信息。
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;2如实际服务时间多于一个月而不足半年的，双方终止合同时，单价按服务套餐单价计算的，执行按月支付的优惠价格。
 </p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;如用户违反其在本服务条款及使用条件中的行为规范的，《叮当到家》有权随时终止向用户提供所述服务。
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp; 3如实际服务时间多于半年而不足一年的，双方终止合同时，单价按服务套餐单价计算的，执行按半年支付的优惠价格。</p>
+
+
+<p style="margin:0;color:#EF7C00;">五.信息发布</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;1.<叮当到家>会将服务人员信息（包括但不限于姓名、年龄、籍贯和服务报价等）公布于<叮当到家>服务平台。网站将努力做到公布的服务人员信息尽可能地真实和准确，但是，我们无法就其内容的准确性、完整性、可靠性作出保证。如果您认为上述信息与服务人员的真实信息不一致，且直接影响到服务质量与您的需求，您唯一可以选择的救济方式为解除与服务人员之间的服务合同，并通过客户或服务评价体系通知我们，我们将即刻更新所发布的信息，并依照对服务人员的管理规定作出相应处理。
 </p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》仅就本服务条款及使用条件所述服务向用户承担责任，且所承担的赔偿责任应以具体赔偿事项所涉的用户与服务人员达成的具体家政服务 协议之服务价款的三倍为限。《叮当到家》免于承担因服务人员与用户之间家政服务协议履行所致任何纠纷的赔偿责任。
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;2.用户可以在<叮当到家>服务平台张贴评论、意见和其他内容，以及提出建议、意见或其他信息，但前提是该等内容须不违反中国现行法律法规及其他规范性文件的要求，不含有非法、淫秽、威胁、诽谤、侵犯隐私、侵犯知识产权或以其他形式对第三方权利构成侵犯。<叮当到家>保留清除或编辑这些内容的权利（但非义务），但不对用户所张贴的内容进行经常性的审查。用户声明和保证对于因其所提供内容引起的对<叮当到家>的损害进行赔偿。
 </p>
 
+<p style="margin:0;color:#EF7C00;">六、隐私</p>
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;<叮当到家>可能会要求用户提供其手机号码及位置信息等个人信息，以便实现向用户推荐更适合其地理范围需求的服务人员等重要功能。<叮当到家>会尽最大努力对前述用户个人信息进行妥善保管，除征得用户明确同意和法律明确规定外，<叮当到家>不会向任何第三方提供用户前述信息。</p>
 
 
-<p style="margin:0;color:#EF7C00;">十 .有限责任</p>
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》负责按"现状"和"可得到"的状态向您提供服务。《叮当到家》服务不作任何明示或暗示的保证，包括但不限于《叮当到家》服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，《叮当到家》也不对其服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。</p>
+<p style="margin:0;color:#EF7C00;">七 、用户的权利和义务</p>
+<p style="margin:0;">一.用户权利<br>&nbsp;&nbsp;&nbsp;&nbsp;1、用户有权合理选定家庭服务员。在<叮当到家>推荐的服务人员不能胜任工作的情况下，经过<叮当到家>同意，可以调换服务人员。</p>
 
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》对由于政府行为譬如政策或法规的变更、自然灾害或战争、通讯线路中断、黑客攻击、计算机病毒侵入或发作、电信部门技术调整、因政府管制而造成网站的暂时性关闭等任何影响网络正常运营的不可抗力事件，以及他人蓄意破坏、正常的系统维护、系统升级，或者因网络拥 塞而导致本网站不能访问而造成的本网站所提供的信息及数据的延误、停滞或错误，以及使用者由此受到的一切损失不承担任何责任。
+<p style="margin:0;">一.用户权利<br>&nbsp;&nbsp;&nbsp;&nbsp;2、用户对服务人员健康状况有异议的，有权要求重新体检，费用由<叮当到家>先行承担。体检合格的，体检费用由用户自行支付；如体检不合格，体检费用由<叮当到家>支付；如用户要求增加非常规体检项目，费用由用户承担。</p>
+
+<p style="margin:0;">一.用户权利<br>&nbsp;&nbsp;&nbsp;&nbsp;3、用户有权拒绝服务人员在服务场所内从事与家庭服务无关的活动。</p>
+
+<p style="margin:0;">一.用户权利<br>&nbsp;&nbsp;&nbsp;&nbsp;4、用户有权追究因服务人员故意或重大过失给用户造成的实际损失。</p>
+
+<p style="margin:0;">一.用户权利<br>&nbsp;&nbsp;&nbsp;&nbsp;5、有下列情形之一的，用户有权要求调换服务人员或解除合同：<br>
+    ①服务人员有违法行为的；<br>
+　　  ②患有传染病的；<br>
+　　  ③未经甲方同意， 擅自带他人进入用户居所的；<br>
+　　  ④存在刁难、虐待用户家庭成员行为的；<br>
+　　  ⑤因过错给用户造成财产损失的；<br>
+　　  ⑥工作消极懈怠或服务质量不合格的；<br>
+　　  ⑦主动要求离职的（自身原因非甲方原因造成）；</p>
+
+<p style="margin:0;">二．用户义务<br>&nbsp;&nbsp;&nbsp;&nbsp; 1、用户应如实填写或告知家庭住址、联系电话、居住条件、工作内容、工作强度、工作时间和健康安全有关的家庭情况（如家中是否有传染病人、精神病人等），以上内容变动应及时通知<叮当到家>客服人员。若用户家庭成员有上述病史，用户应采取预防措施以保证服务人员不会受传染或伤害，否则，造成的后果由用户负责。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 2、用户不得给服务人员随意增加规定以外的服务内容及工作量，如需增加，应与服务人员协商，相应增加报酬。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 3、用户应尊重服务人员的人格和劳动，提供安全的劳动条件、服务环境和居住场所，保证不与成年异性同居一室（生活完全由他人照护的失能者除外）。用户应保证服务人员的人身安全，如服务人员突发疾病或受伤时，用户应及时采取必要的救治措施，并及时通知<叮当到家>客服人员。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 4、用户不得让服务人员从事高危性室外劳动（如：清洁外墙、室外玻璃、防护栏等），以免造成服务人员人身安全事故。服务人员在为用户服务期间，用户应对服务人员的安全作业进行督导，为服务人员提供健康、安全的工作环境和必要的劳动保护工具。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 5、用户应保证服务人员每周一天的休息时间和每天基本的睡眠时间，并尽量满足服务人员用餐习惯、用餐水准不低于一般生活水平。国家法定假日确需服务人员照常工作的，要给予加班补助，加班工资按照日平均工资标准、加时给予150%的工资、加一天给予200%的工资，或在征得服务人员同意的前提下安排补休。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;6、用户未经<叮当到家>同意，不得要求服务人员为第三方服务，也不得带往非约定场所工作或要求其从事非约定工作。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;7、用户不得扣押服务人员财产和证件或采取搜身、恐吓、殴打等侵犯人身安全和财产权利的行为。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;8、用户有义务配合<叮当到家>对服务人员进行管理和工作指导，并妥善保管家中财物。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 9、用户应按时支付服务人员服务费用，无正当理由不支付服务费，应向<叮当到家>支付滞纳金，滞纳金以应支付额为基数，每日按万分之五计算；</p>
+
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;10、服务期满甲方续用<叮当到家>推荐的服务人员，应提前7日与<叮当到家>续签合同。</p>
+
+
+<p style="margin:0;color:#EF7C00;">八.<叮当到家>的权利和义务</p>
+<p style="margin:0;">一．<叮当到家>权利<br>&nbsp;&nbsp;&nbsp;&nbsp;1、<叮当到家>有权向用户询问、了解投诉情况或服务人员反映情况的真实性。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;2、有下列情形之一的，<叮当到家>有权召回推荐的服务人员或解除合同：<br>
+     ①用户教唆服务人员脱离<叮当到家>管理平台的；<br>
+　　②用户家庭成员中有传染病人、精神病人等未如实告知的，或者未采取预防措施的；<br>
+　　③用户无正当理由未按时支付服务费用的；<br>
+　　④约定的服务场所或服务内容发生变更而未取得<叮当到家>同意的；<br>
+　　⑤用户对家庭服务人员的工作要求违反国家法律、法规或有刁难、虐待等损害服务人员身心健康情形的；</p>
+
+
+<p style="margin:0;">二．<叮当到家>义务<br>&nbsp;&nbsp;&nbsp;&nbsp; 1、<叮当到家>应当遵守国家法律法规和职业道德，根据本协议认真履行职责，努力为用户提供优质高效的服务，保护用户家庭隐私安全。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;2、<叮当到家>应要求推荐的服务人员尊重用户的生活及卫生习惯，不得随意打听和传播用户家庭隐私或家庭情况，不得私自动用用户的物品，不参与用户的家庭纠纷。未经用户许可，服务人员不得擅自带亲戚朋友或不认识的人到用户住处或单位。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 3、<叮当到家>应为用户推荐身份真实、文化程度、培训状况和符合要求的服务人员；并应持有正规医疗机构在一年以内出具的体检合格证明。</p>
+
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp; 4、<叮当到家>推荐的家庭服务人员应经过培训合格，并进行过程监督，接受用户投诉并妥善处理。</p>
+
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;  5、<叮当到家>推荐的服务人员需购买人寿家政综合险，包括：服务人员责任保险及服务人员责任保险附加雇主责任险。</p>
+
+
+<p style="margin:0;color:#EF7C00;">九 .软件使用条款</p>
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;您需要下载<叮当到家>提供的手机软件并安装后方得以从手机客户端使用<叮当到家>所提供的服务。<叮当到家>在此授予您免费的、不可转让的、非独占的、全球性个人许可，允许您使用由<叮当到家>提供的、包含在服务中的软件。但是，您不得复制、修改、发布、出售或出租我们的服务或所含软件的任何部分，也不得进行反向工程或试图提取该软件的源代码，除非法律禁止上述限制或您已获得<叮当到家>的书面许可。
 </p>
 
-<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》不对用户所发布信息的保存、修改、删除或储存失败负责。对网站上的非因《叮当到家》故意所导致的排字错误、疏忽等不承担责任。</p>
-
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》有权但无义务，改善或更正本网站任何部分之疏漏、错误。</p>
 
 
 
-<p style="margin:0;color:#EF7C00;">十一、关于争议的解决</p>
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;有关与您和《叮当到家》之间发生的任何形式的争议均应友好协商解决，协商不成的，任一方有权将争议提交北京市海淀区人民法院法院诉讼解决。</p>
+<p style="margin:0;color:#EF7C00;">十 、关于版权</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;<叮当到家>服务所包含或提供的所有内容诸如文字、图表、标识、按钮图标、图像、声音文件片段、数字下载、数据编辑和软件都是<叮当到家>或其内 容提供者的财产，受中国和国际版权法的保护。<叮当到家>上所提供使用的所有软件都是<叮当到家>或其软件供应商的财产，受中国和国际版权法的保护。 </p>
+
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;同时，<叮当到家>尊重他人的知识产权。如果您认为相应信息对您的作品的使用已经构成版权侵犯，请及时通知我们，我们将按照现行法律法规的规定的版权侵权投诉程序予以处理。同时，网站将视同您同意由于您所提交的通知所产生或者可能产生的给第三方造成损失的赔偿权利。
+</p>
 
 
 
-<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;《叮当到家》将通过电子邮件、短信、在本网站上发布通知或其它服务与用户进行联系。您同意我们用这些方式提供给您的所有协议、通知、披露和其他信息是符合相关的法律法规要求的。如果我们以该等形式向您发出信息或者在本网站上发出相关通知，将视为您已收到所有协议、声明、 披露和其它信息。</p>
+
+
+<p style="margin:0;color:#EF7C00;">十一.关于商标权利</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;本网站服务所包含或者提供的图表、标识、网页页眉、按钮图标、文字、服务品名均为<叮当到家>的商标、注册商标或商业外观设计。其它商标或商业外观设计不得以任何方式与这些商标、设计类似而可能引起消费者视觉混淆，或者以诋毁、诽谤的方式，与本网站形成竞争。未经服务人员的书面许可，本网站上的任何内容都不应被解释为以默许或其他方式授予许可或使用本网站上出现的商标的权利。</p>
+
+
+<p style="margin:0;color:#EF7C00;">十二 .服务的修改和终止</p>
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;<叮当到家>始终在不断更改和改进其所提供的服务。<叮当到家>可能会增加或删除某项服务功能，视具体情况暂停或彻底停止某项服务。用户可以随时停止 使用<叮当到家>的服务，<叮当到家>也可能随时停止向用户提供服务，或随时对<叮当到家>的服务增加或设置新的限制。但是，如果<叮当到家>停止某项服务，则在可能的情况下，<叮当到家>会向用户发出合理的提前通知，并让用户有机会备份和转移其留存在<叮当到家>中的信息。<br>
+ &nbsp;&nbsp;&nbsp;&nbsp;如用户违反其在本服务条款及使用条件中的行为规范的，<叮当到家>有权随时终止向用户提供所述服务。<br>
+ &nbsp;&nbsp;&nbsp;&nbsp; <叮当到家>仅就本服务条款及使用条件所述服务向用户承担责任，且所承担的赔偿责任应以具体赔偿事项所涉的用户与服务人员达成的具体家政服务协议之服务价款的三倍为限。<叮当到家>免于承担因服务人员与用户之间家政服务协议履行所致任何纠纷的赔偿责任。
+</p>
+
+
+<p style="margin:0;color:#EF7C00;">十三.有限责任</p>
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;<叮当到家>负责按"现状"和"可得到"的状态向您提供服务。<叮当到家>服务不作任何明示或暗示的保证，包括但不限于<叮当到家>服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，<叮当到家>也不对其服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。<br>
+ &nbsp;&nbsp;&nbsp;&nbsp;  <叮当到家>对由于政府行为譬如政策或法规的变更、自然灾害或战争、通讯线路中断、黑客攻击、计算机病毒侵入或发作、电信部门技术调整、因政府管制而造成网站的暂时性关闭等任何影响网络正常运营的不可抗力事件，以及他人蓄意破坏、正常的系统维护、系统升级，或者因网络拥 塞而导致本网站不能访问而造成的本网站所提供的信息及数据的延误、停滞或错误，以及使用者由此受到的一切损失不承担任何责任。<br>
+ &nbsp;&nbsp;&nbsp;&nbsp; <叮当到家>不对用户所发布信息的保存、修改、删除或储存失败负责。对网站上的非因<叮当到家>故意所导致的排字错误、疏忽等不承担责任。<br>
+ &nbsp;&nbsp;&nbsp;&nbsp;<叮当到家>有权改善或更正本网站任何部分之疏漏、错误。
+</p>
+
+
+<p style="margin:0;color:#EF7C00;">十四、关于争议的解决</p>
+<p style="margin:0;">&nbsp;&nbsp;&nbsp;&nbsp;有关与您和<叮当到家>之间发生的任何形式的争议均应友好协商解决，协商不成的，任一方有权将争议提交北京市海淀区人民法院诉讼解决。
+</p>
+
+
+<p style="margin:0;border-bottom:1px solid #ccc;">&nbsp;&nbsp;&nbsp;&nbsp;<叮当到家>将通过电子邮件、短信、在本网站上发布通知或其它服务与用户进行联系。您同意我们用这些方式提供给您的所有协议、通知、披露和其他信息是符合相关的法律法规要求的。如果我们以该等形式向您发出信息或者在本网站上发出相关通知，将视为您已收到所有协议、声明、 披露和其它信息。</p>
 
 
 
