git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@446 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -58,7 +58,7 @@
 						
 						<li class="item-content">
 							<div class="item-inner">
-							<div class="item-title label" style="margin-top:-61px;">备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注:</div>
+							<div class="item-title label">备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注:</div>
 								<div class="item-xx" style="width:70%;">
 									<textarea class="resizable" id="remarks" name="remarks" placeholder="服务要求,最多200字" maxLength="200" style="width:90%;"></textarea>
 								</div>
