--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -58,7 +58,7 @@
 						
 						<li class="item-content">
 							<div class="item-inner">
-							<div class="item-title label">备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注:</div>
+							<div class="item-title label" >备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注:</div>
 								<div class="item-xx" style="width:70%;">
 									<textarea class="resizable" id="remarks" name="remarks" placeholder="服务要求,最多200字" maxLength="200" style="width:90%;"></textarea>
 								</div>
@@ -69,29 +69,29 @@
 				</div>
 			
 			
-			<div  id="hhAddons" class="content-block"style="padding:0;margin:0;">
+			<!-- <div  id="hhAddons" class="content-block"style="padding:0;margin:0;">
 				<div class="row"style="background:#F8F8F8;margin-left:0;">
 					
-				 	<div class="col-30"style="width:33.333%;text-align:center;" >
+				 	<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="zuofanId">
 							<img src="img/icons/zuofanServiceAddons/northfood.png" name="tag"  />
 							<input type="hidden" value=""  id="zuofanPrice">
 							<div class="col-30" >北方菜</div>
 					</div>
-					<div class="col-30"style="width:33.333%;text-align:center;" >
+					<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="xiyiId">
 							<img src="img/icons/zuofanServiceAddons/noodles.png" name="tag" />
 							<input type="hidden" value="" id="xiyiPrice">
 							<div class="col-30" >面食</div>
 					</div>
-					<div class="col-30"style="width:33.333%;text-align:center;" >
+					<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="qingjieId">
 							<img src="img/icons/zuofanServiceAddons/sourthfood.png" name="tag"  />
 							<input type="hidden" value="" id="qingjiePrice">
 							<div class="col-30" >南方菜</div>
 					</div> 					
 				</div>  
-			</div> 
+			</div>   -->
 			
 			
 			
