git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@465 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/cook.html
+++ b/jhj-web-user/order/fiveservice/cook.html
@@ -8,10 +8,9 @@
 			<input  type="hidden" id="parentServiceType" value="">
 			
 			<div id="serviceContainer">
-				{{#each data}}
+				{{#each data.list}}
 
 				<div class="template-fiveservice" >
-					<!-- <div class="circle-template-fiveservice1">{{name}}</div> -->
 					
 					<div class="circle-template-fiveservice2">
 						<img src="{{service_img_url}}" alt="">
