--- a/jhj-web-user/order/fiveservice/jinpaibaojie.html
+++ b/jhj-web-user/order/fiveservice/jinpaibaojie.html
@@ -9,7 +9,7 @@
 			<input  type="hidden" id="parentServiceType" value="">
 			
 			<div id="serviceContainer">
-				{{#each data}}
+				{{#each data.list}}
 
 				<div class="template-fiveservice" >
 					<div class="circle-template-fiveservice2">
