--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -69,29 +69,29 @@
 				</div>
 			
 			
-			<!-- <div  id="hhAddons" class="content-block"style="padding:0;margin:0;">
+			 <div  id="hhAddons" class="content-block"style="padding:0;margin:0;">
 				<div class="row"style="background:#F8F8F8;margin-left:0;">
 					
 				 	<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="zuofanId">
 							<img src="img/icons/zuofanServiceAddons/northfood.png" name="tag"  />
 							<input type="hidden" value=""  id="zuofanPrice">
-							<div class="col-30" >北方菜</div>
+							<div class="col-30 zhongdiangong-threefood" >北方菜</div>
 					</div>
 					<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="xiyiId">
 							<img src="img/icons/zuofanServiceAddons/noodles.png" name="tag" />
 							<input type="hidden" value="" id="xiyiPrice">
-							<div class="col-30" >面食</div>
+							<div class="col-30 zhongdiangong-threefood" >面食</div>
 					</div>
 					<div style="width:33.333%;text-align:center;" >
 							<input type="hidden" value="" id="qingjieId">
 							<img src="img/icons/zuofanServiceAddons/sourthfood.png" name="tag"  />
 							<input type="hidden" value="" id="qingjiePrice">
-							<div class="col-30" >南方菜</div>
+							<div class="col-30 zhongdiangong-threefood" >南方菜</div>
 					</div> 					
 				</div>  
-			</div>   -->
+			</div>  
 			
 			
 			
