git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@472 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/am-h5/university/university-first.html
+++ b/am-h5/university/university-first.html
@@ -39,18 +39,6 @@
   
 </head>
 <body style="background:#E6E6E6;">
-
-			<!-- <div class="am-panel am-panel-default jhj-tuijian-back">
-				<div class="am-panel-hd jhj-tuijian-shuoming">
-					<a href="javascript:;">
-						<img src="assets/i/back.png" class="am-fl"/>
-					</a>
-					<p class="am-center" style="margin-top:0;margin-bottom:0;text-align:center;">
-						叮当大学
-					</p></i>
-				</div>
-			</div> -->
-			
 			
 			<div class="am-panel-hd jhj-tuijian-caozuo am-padding-bottom">
 				  <div class="am-panel-bd">
@@ -67,8 +55,8 @@
 			<div class="am-panel am-panel-default am-margin-top jhj-dddx">
 			  <div class="am-panel-bd">
 			  	<span class="jhj-dddxspan1" >
-			  		钟点工测试营
-			  		<input type="hidden" value="" name="testServiceId" id="hourTestId">
+			  		金牌保洁测试营
+			  		<input type="hidden" value="" name="testServiceId" id="jinpaiTestId">
 			  		<input type="hidden" value="" name="latestTime">
 			  	</span>
 			  	<span class="jhj-dddxspan2">
@@ -79,8 +67,8 @@
 			<div class="am-panel am-panel-default am-margin-top jhj-dddx">
 			  <div class="am-panel-bd">
 			  	<span class="jhj-dddxspan1" >
-			  		快送测试营
-			  		<input type="hidden" value="" name="testServiceId" id="fastDeliverTestId">
+			  		厨娘烧饭测试营
+			  		<input type="hidden" value="" name="testServiceId" id="chuniangTestId">
 			  		<input type="hidden" value="" name="latestTime">
 			  	</span>
 			  	<span class="jhj-dddxspan2">
@@ -91,8 +79,33 @@
 			<div class="am-panel am-panel-default am-margin-top jhj-dddx">
 			  <div class="am-panel-bd">
 			  	<span class="jhj-dddxspan1" >
-			  		助理测试营
-			  		<input type="hidden" value="" name="testServiceId" id="amTestId">
+			  		贴心家事测试营
+			  		<input type="hidden" value="" name="testServiceId" id="tiexinTestId">
+			  		<input type="hidden" value="" name="latestTime">
+			  	</span>
+			  	<span class="jhj-dddxspan2">
+			  	</span>
+			  </div>
+			</div>
+			
+			
+			<div class="am-panel am-panel-default am-margin-top jhj-dddx">
+			  <div class="am-panel-bd">
+			  	<span class="jhj-dddxspan1" >
+			  		深度养护测试营
+			  		<input type="hidden" value="" name="testServiceId" id="shenduTestId">
+			  		<input type="hidden" value="" name="latestTime">
+			  	</span>
+			  	<span class="jhj-dddxspan2">
+			  	</span>
+			  </div>
+			</div>
+			
+			<div class="am-panel am-panel-default am-margin-top jhj-dddx">
+			  <div class="am-panel-bd">
+			  	<span class="jhj-dddxspan1" >
+			  		 企业服务测试营
+			  		<input type="hidden" value="" name="testServiceId" id="qiyeTestId">
 			  		<input type="hidden" value="" name="latestTime">
 			  	</span>
 			  	<span class="jhj-dddxspan2" >
